# goods_dpi_db

./: .env_example  Cargo.toml  Dockerfile  WEBSOCKET_INTEGRATION.md  fly.toml  test_websocket.sh
.github/workflows/: rust.yml
migrations/2023-12-15-155927_create_tables/: up.sql
migrations/2023-12-15-161415_professionalTables/: down.sql  up.sql
migrations/2023-12-15-163239_appointmentTables/: down.sql  up.sql
migrations/2023-12-15-164331_addressTables/: down.sql  up.sql
migrations/2023-12-15-164553_userOrderTables/: down.sql  up.sql
migrations/2023-12-15-164831_chatTables/: down.sql  up.sql
migrations/2023-12-16-091725_reviewTables/: down.sql  up.sql
migrations/2023-12-16-095513_add_photo_id_to_user_and_profis_and_average_rating_to_profiles/: down.sql  up.sql
migrations/2023-12-20-191326_add_longitude_latitude_to_address/: down.sql  up.sql
migrations/2023-12-27-205942_change_lat_lng_to_double/: down.sql  up.sql
migrations/2023-12-28-231915_add_subcategory_name_to_service_offerings/: down.sql  up.sql
migrations/2023-12-30-103717_add_remote_professional_profile_possibility/: down.sql  up.sql
migrations/2023-12-30-122226_rename_photo_id_columns/: down.sql  up.sql
migrations/2023-12-30-122359_some_image_url_columns_make_non_nullable/: down.sql  up.sql
migrations/2023-12-30-123255_image_url_set_string/: down.sql  up.sql
migrations/2024-01-07-211305_change_average_rating_format/: down.sql  up.sql
migrations/2024-01-07-223649_change_price_format/: down.sql  up.sql
migrations/2024-01-07-224102_change_review_formats/: down.sql  up.sql
migrations/2024-01-08-131203_add_user_name_to_review/: down.sql  up.sql
migrations/2024-01-08-220755_add_date_to_review/: down.sql  up.sql
migrations/2024-01-08-225334_add_professional_name_to_profile/: down.sql  up.sql
migrations/2024-01-11-180017_create_business_hours/: down.sql  up.sql
migrations/2024-01-12-164532_delete_title_from_chat/: down.sql  up.sql
migrations/2024-01-13-193652_change_chat_references/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/controllers/: db_connection.rs  (+1 more)
(+97 files in other folders)
