[package]
name = "goods_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.63"
base64 = "0.22.1"
rand = "0.8.5"
jsonwebtoken = "9.3.0"
tokio = "1.35.0"
log = "0.4.21"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono"] }
actix = "0.13.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
actix-cors = "0.6.5"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde_json = "1.0.108"
