[package]
name = "goods_backend"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = "thin"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.63"
tracing = "0.1.40"
rand = "0.8.5"
jsonwebtoken = "9.3.0"
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "chrono"] }
actix = "0.13.5"
actix-web = "4.9.0"
actix-web-actors = "4.3.1+deprecated"
actix-cors = "0.7.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.128"
